--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "dev": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "nodemonConfig": {
+      "ignore": ["svelte/*"]
+  },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/content-disposition": "^0.5.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lokijs": "^1.5.14",
     "@types/node": "^20.12.12",
     "nodemon": "^3.1.0",
@@ -22,11 +27,13 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "content-disposition": "^0.5.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ffmpeg-static": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lokijs": "^1.5.12",
     "pino": "^9.1.0",
     "pino-http": "^10.1.0",
