--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,13 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-storage
 
 # dependencies
-node_modules
+/node_modules
 /.pnp
 .pnp.js
 
 # testing
-coverage
+/coverage
 
 # next.js
 /.next/
@@ -15,7 +14,6 @@ coverage
 
 # production
 /build
-dist/
 
 # misc
 .DS_Store
