finally pageinated the homepage, added call to re-pull video thumbnails

--- a/server/.env
+++ b/server/.env
@@ -5,6 +5,8 @@ YK_DB_STORAGE_DIR=./storage/db
 # loki specific
 # disk/memory
 YK_LOKI_ADAPTER=disk
+# new sql lite
+DB_FILE_NAME=db.sqlite
 
 # Download interval (default 5m)
 # How often we try to download a video
